--- a/styles.css
+++ b/styles.css
@@ -154,13 +154,14 @@ h2 {
 .action-buttons {
   display: flex;
   gap: 0.625rem;
+  margin-left: 0.45rem;
 }
 .filter-input {
   padding: 0.4rem 0.6rem;
   font-size: 0.9rem;
   border-radius: 6px;
   border: none;
-  max-width: 125px;
+  max-width: 115px;
   background: #333;
   color: #eee;
 }
@@ -289,7 +290,7 @@ h2 {
   line-height: 1.3;
 }
 button {
-  font-size: 0.875rem;
+  font-size: 0.750rem;
   padding: 0.5rem 1.375rem;
   border-radius: 8px;
   background: #506aff;
